--- a/src/static/scss/components/_header.scss
+++ b/src/static/scss/components/_header.scss
@@ -9,6 +9,7 @@
 .navigation-wrapper{
   font-size: 16px;
   color: white;
+  font-family: $primary_font;
 
   &__menu{
     display: flex;
@@ -19,13 +20,4 @@
       padding:20px
     }
   }
-}
-
-.login_button{
-  color: #00D411;
-  padding: 8px;
-  border-radius: 200px;
-  border: none;
-  width: 166px;
-  height: 48px;
 }
