--- a/src/static/scss/components/_button.scss
+++ b/src/static/scss/components/_button.scss
@@ -1,8 +1,13 @@
-.main_button{
+.c-button{
   color: $primary_green;
   border-radius: 20rem;
   border: none;
-  padding: 0.9rem 1.7rem;
-  width: 10.2rem;
+  padding: 0.9rem 3.7rem;;
+  width: auto;
   outline: none;
+
+  &--green{
+    background-color: $primary_green;
+    color: $primary_white;
+  }
 }
