--- a/src/static/scss/components/_hero-slider.scss
+++ b/src/static/scss/components/_hero-slider.scss
@@ -8,17 +8,12 @@
   background-size: cover;
 
   &__content{
-    display: flex ;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    background: rgba(66, 66, 66, 0.5);
 
-    &__title{
-      font-size: 4.2rem;
-      font-family: $primary_font;
+    &__green-part{
+      color: #D7FFDA;
     }
   }
-
-
 }
