add office section and styles

--- a/src/static/scss/base/common.scss
+++ b/src/static/scss/base/common.scss
@@ -1,19 +1,36 @@
-.column{
-  display: flex ;
+.column {
+  display: flex;
   flex-direction: column;
 }
 
-.title{
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.title {
   font-family: $primary_font;
 
-  &--big{
+
+  &--big {
     font-size: 4.2rem;
     max-width: 51rem;
     text-align: center;
-
   }
 
-  &--white{
+  &--white {
     color: $primary_white;
   }
+
+  &--medium--green {
+    font-size: 2.4rem;
+    color: $primary_green;
+  }
+}
+
+.paragraph {
+  line-height: 1.92rem;
+  font-size: 1.08rem;
+  max-width: 29.1rem;
+  text-align: justify;
 }
