add style for swiper

--- a/src/static/scss/components/_hero-slider.scss
+++ b/src/static/scss/components/_hero-slider.scss
@@ -17,3 +17,13 @@
     }
   }
 }
+
+span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: $primary_green;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet {
+  background-color: white;
+  opacity: 1;
+}
