--- a/src/static/scss/styles.scss
+++ b/src/static/scss/styles.scss
@@ -9,6 +9,7 @@
 @import "components/hero-slider";
 @import "components/office";
 @import "components/panel";
+@import "components/real-stories";
 
 @import "swiper/swiper-bundle.css";
 @import "swiper/swiper.min.css";
