fix style for real stories

--- a/src/static/scss/base/common.scss
+++ b/src/static/scss/base/common.scss
@@ -16,7 +16,6 @@
     font-weight: bold;
   }
 
-
   &--xl-size {
     font-size: 4.2rem;
     max-width: 51rem;
@@ -31,9 +30,7 @@
 
   &--medium{
     font-size: 2.88rem;
-    margin-left: 3.18rem;
-    margin-top: 0;
-    margin-bottom: -1rem;
+    margin-bottom: 2px;
   }
 
   &--m-size{
