--- a/src/static/scss/styles.scss
+++ b/src/static/scss/styles.scss
@@ -10,6 +10,7 @@
 @import "components/office";
 @import "components/panel";
 @import "components/real-stories";
+@import "components/icon";
 
 @import "swiper/swiper-bundle.css";
 @import "swiper/swiper.min.css";
