--- a/src/static/scss/base/_variables.scss
+++ b/src/static/scss/base/_variables.scss
@@ -4,3 +4,10 @@ $primary_green: #00D411;
 $primary_white: #ffffff;
 $primary_blue: #0000FFFF;
 
+
+//settings
+$dotPulseBefore : 599.04rem 0 0 -0.3rem, 599.04rem 0 0 0.12rem, 599.04rem 0 0 -0.3rem;
+$dotPulse: 599.94rem 0 0 -0.3rem, 599.94rem 0 0 0.12rem, 599.94rem 0 0 -0.3rem;
+$dotPulseAfter: 600.84rem 0 0 -0.3rem, 600.84rem 0 0 0.12rem, 600.84rem 0 0 -0.3rem;
+
+
