--- a/src/static/scss/styles.scss
+++ b/src/static/scss/styles.scss
@@ -11,6 +11,7 @@
 @import "components/panel";
 @import "components/real-stories";
 @import "components/icon";
+@import "components/loader";
 
 @import "swiper/swiper-bundle.css";
 @import "swiper/swiper.min.css";
