--- a/src/static/scss/styles.scss
+++ b/src/static/scss/styles.scss
@@ -12,6 +12,7 @@
 @import "components/real-stories";
 @import "components/icon";
 @import "components/loader";
+@import "components/footer";
 
 @import "swiper/swiper-bundle.css";
 @import "swiper/swiper.min.css";
