--- a/src/static/scss/components/_header.scss
+++ b/src/static/scss/components/_header.scss
@@ -1,7 +1,8 @@
 .header-container{
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 10px;
   background-color: $primary_green;
   height: 6rem;
   position: fixed;
@@ -20,7 +21,7 @@
     list-style-type: none;
 
     &__item{
-      padding:2rem;
+      padding: 2rem;
 
       &--small{
         padding: 0.3rem;
@@ -39,5 +40,17 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .navigation-wrapper__menu__item {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 817px) {
+  .navigation-wrapper__menu__item {
+    padding: 0.5rem;
   }
 }
