--- a/src/static/scss/styles.scss
+++ b/src/static/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "components/icon";
 @import "components/loader";
 @import "components/footer";
+@import "components/hamburger-menu";
 
 @import "swiper/swiper-bundle.css";
 @import "swiper/swiper.min.css";
