--- a/src/static/scss/components/_footer.scss
+++ b/src/static/scss/components/_footer.scss
@@ -23,7 +23,7 @@
   flex-wrap: wrap;
 }
 
-.reserved-rights{
+.reserved-rights {
   justify-content: center;
 }
 
@@ -31,12 +31,12 @@
   margin-bottom: 6.48rem;
 }
 
-.sub-footer{
+.sub-footer {
   flex-wrap: wrap;
   justify-content: center;
 }
 
-@media only screen and  (min-device-width: 280px) and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
   .c-footer__col1 {
     margin-bottom: 0;
   }
@@ -47,4 +47,46 @@
     flex-direction: column-reverse;
     margin-top: 2rem;
   }
+}
+
+@media only screen and (min-device-width: 200px) and (max-device-width: 480px) {
+  .c-footer__col1 {
+    margin-bottom: 0;
+  }
+  .baseline-space {
+    flex-direction: column;
+  }
+  .baseline-space:nth-child(2) {
+    flex-direction: column-reverse;
+    margin-top: 2rem;
+  }
+}
+
+.arrow {
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-left: 8px;
+
+  &::before{
+    content: "❯";
+    color: white;
+    display: inline-block;
+    margin-right: 6px;
+  }
+}
+
+.arrow-down::before {
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.nested{
+  display: none;
+}
+
+.active{
+  display: block;
 }
