--- a/src/static/scss/components/_office.scss
+++ b/src/static/scss/components/_office.scss
@@ -95,3 +95,9 @@
     width: 11.47rem;
   }
 }
+
+@media only screen and  (min-device-width: 200px) and (max-device-width: 480px) {
+  .c-office{
+    flex-direction: column;
+  }
+}
