--- a/src/static/scss/styles.scss
+++ b/src/static/scss/styles.scss
@@ -14,6 +14,7 @@
 @import "components/loader";
 @import "components/footer";
 @import "components/hamburger-menu";
+@import "components/mobile-navigation";
 
 @import "swiper/swiper-bundle.css";
 @import "swiper/swiper.min.css";
