--- a/src/static/scss/base/_reset.scss
+++ b/src/static/scss/base/_reset.scss
@@ -2,11 +2,15 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
   padding: 0;
   margin: 0;
@@ -18,7 +22,6 @@ ul {
   margin: 0;
   padding: 0;
 }
-
 
 ::-webkit-scrollbar {
   height: 6px;
