--- a/src/static/scss/base/_typhography.scss
+++ b/src/static/scss/base/_typhography.scss
@@ -1,5 +1,5 @@
 @include font("Poppins", "Poppins-Bold");
 @include font("Poppins", "Poppins-Light");
 
-$poppins: 'Poppins', sans-serif;
+$poppins: "Poppins", sans-serif;
 $primary_font: $poppins;
