--- a/src/static/scss/components/_hamburger-menu.scss
+++ b/src/static/scss/components/_hamburger-menu.scss
@@ -18,19 +18,20 @@
 
   &::before {
     top: -8px;
-    transition: top .3s, transform .6s linear;
+    transition: top 0.3s, transform 0.6s linear;
   }
 
   &::after {
     top: 8px;
-    transition: top .3s linear;
+    transition: top 0.3s linear;
   }
 }
 
 .is-active {
   transform: rotate(45deg);
 
-  &::after, &::before {
+  &::after,
+  &::before {
     top: 0;
   }
 
