--- a/src/static/scss/components/_loader.scss
+++ b/src/static/scss/components/_loader.scss
@@ -12,14 +12,15 @@
   animation: dot-pulse 1.5s infinite linear;
   animation-delay: 0.25s;
 
-  &::before, &::after {
+  &::before,
+  &::after {
     content: "";
     display: inline-block;
     position: absolute;
     top: 0;
     width: 1.8rem;
     height: 1.8rem;
-    border-radius: 50%
+    border-radius: 50%;
   }
 
   &::before {
@@ -33,7 +34,6 @@
     box-shadow: 600.84rem 0 0 -0.3rem;
     animation: dot-pulse-after 1.5s infinite linear;
     animation-delay: 0.5s;
-    margin-left: 0.84rem
+    margin-left: 0.84rem;
   }
 }
-
